data/derived/comb/progs/unify/prog2293.ml.out
Characters 257-283:
  | (_, 2) -> buildTimes( (build(rand*3), depth - 1), build((rand +1), depth - 1) )
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
